# ChangeLog for media-libs/ftgl
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/ftgl/ChangeLog,v 1.7 2006/05/07 20:30:30 corsair Exp $

  07 May 2006; Markus Rothe <corsair@gentoo.org> ftgl-2.1.2-r1.ebuild:
  Stable on ppc64

  02 Feb 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  +files/ftgl-2.1.2-gcc41.patch, ftgl-2.1.2-r1.ebuild:
  Add a GCC 4.1 compile fix per #120835.

  10 Dec 2005; Tom Gall <tgall@gentoo.org> ftgl-2.1.2-r1.ebuild:
  added ~ppc64

*ftgl-2.1.2-r1 (04 Nov 2005)

  04 Nov 2005; Seemant Kulleen <seemant@gentoo.org> +ftgl-2.1.2-r1.ebuild:
  now it actually installs the shared library thanks to ilya kriveshko, and
  libtool fixes, thanks to az.

  12 Jun 2005; Marcus D. Hanwell <marcus@gentoo.org> ftgl-2.1.2.ebuild:
  Stable on amd64.

  07 Apr 2005; Marcus D. Hanwell <cryos@gentoo.org> ftgl-2.1.2.ebuild:
  Marked ~amd64.

*ftgl-2.1.2 (17 Dec 2004)

  17 Dec 2004; Michael Sterrett <mr_bones_@gentoo.org>
  +files/2.1.2-ftgl.pc.in.patch, +ftgl-2.1.2.ebuild:
  initial commit - ebuild provided by Jordi Vilalta via bug #47048
