@@ -1,7 +1,27 @@
-MD5 3c782eade08039c4419bc8f3f966be6f ChangeLog 1126
+AUX 2.1.2-ftgl.pc.in.patch 334 RMD160 7adc21f49591fce7f5ec8224aa359ed1fe470f3e SHA1 d3f8cb465662e833197678cd16dfde37d57876d4 SHA256 fc5e76c57bf97204f0b3550f9ffa637bbdd11b7b140c887b5a156af8514d80b9
 MD5 8c117c40c473625c657ecb59b535caa1 files/2.1.2-ftgl.pc.in.patch 334
-MD5 2c668ede6711942506740cffd25b1245 files/digest-ftgl-2.1.2 62
-MD5 2c668ede6711942506740cffd25b1245 files/digest-ftgl-2.1.2-r1 62
+RMD160 7adc21f49591fce7f5ec8224aa359ed1fe470f3e files/2.1.2-ftgl.pc.in.patch 334
+SHA256 fc5e76c57bf97204f0b3550f9ffa637bbdd11b7b140c887b5a156af8514d80b9 files/2.1.2-ftgl.pc.in.patch 334
+AUX ftgl-2.1.2-gcc41.patch 524 RMD160 25bd6585949085275d94c102fe65beaa3576dbc8 SHA1 c42f2411c6046100c8d316147630505e8412df35 SHA256 a3a550f02e8db6cb8a66071f67493f1fc3f57188a98a33797f37b81a1322ec13
 MD5 522cd2e1e818d657e3e56f2ad3ab67c9 files/ftgl-2.1.2-gcc41.patch 524
-MD5 fac04f55c27d0f7bedf4885288b2772a ftgl-2.1.2-r1.ebuild 1247
+RMD160 25bd6585949085275d94c102fe65beaa3576dbc8 files/ftgl-2.1.2-gcc41.patch 524
+SHA256 a3a550f02e8db6cb8a66071f67493f1fc3f57188a98a33797f37b81a1322ec13 files/ftgl-2.1.2-gcc41.patch 524
+DIST ftgl-2.1.2.tar.gz 568497 RMD160 561635a5ad871ea1a80997d3d6a0411825724920 SHA1 61a019ba610351c346cd29cfa1bb12e7517475f5 SHA256 83bf45ce03495bb0c0159a678144877b0dbc7d2f3d8e9f0aa006e72c5198d15f
+EBUILD ftgl-2.1.2-r1.ebuild 1309 RMD160 e731c84417aeee86a79c64f64e904dfbaa382c43 SHA1 b0b51252eeca5d8ce77f25a9260b864d38b57e61 SHA256 c1220e88c5e0bfd8709d8ca70543cd4d5a7eb62ef4a392448a171ba1afdb851f
+MD5 adc1677396f69021bf6c35a8c8511207 ftgl-2.1.2-r1.ebuild 1309
+RMD160 e731c84417aeee86a79c64f64e904dfbaa382c43 ftgl-2.1.2-r1.ebuild 1309
+SHA256 c1220e88c5e0bfd8709d8ca70543cd4d5a7eb62ef4a392448a171ba1afdb851f ftgl-2.1.2-r1.ebuild 1309
+EBUILD ftgl-2.1.2.ebuild 1082 RMD160 f9bcd0a0c347d719dd7d7d635d1e99f89d0945e1 SHA1 bcc386213a40d6baf184c77adce7695f8c035bc6 SHA256 57c313934008045feb642f36a72d9ad602c3307f691a592309ec26dc66382621
 MD5 613e2395bb6b970f07a5cdeca30de753 ftgl-2.1.2.ebuild 1082
+RMD160 f9bcd0a0c347d719dd7d7d635d1e99f89d0945e1 ftgl-2.1.2.ebuild 1082
+SHA256 57c313934008045feb642f36a72d9ad602c3307f691a592309ec26dc66382621 ftgl-2.1.2.ebuild 1082
+MISC ChangeLog 1258 RMD160 787fa8bf549655d9490b74be180e36bc9f209fa5 SHA1 d2cf92c5442466ed723844441fde5dc36929679e SHA256 d94046e760b670cc4335c4ab095ab9d4bfc67c2717df49e1fc30e536b6542a42
+MD5 93df30391232470d50f7431b780ba1b4 ChangeLog 1258
+RMD160 787fa8bf549655d9490b74be180e36bc9f209fa5 ChangeLog 1258
+SHA256 d94046e760b670cc4335c4ab095ab9d4bfc67c2717df49e1fc30e536b6542a42 ChangeLog 1258
+MD5 f3a1d4b170b3d3e121b240ba1554dacd files/digest-ftgl-2.1.2 232
+RMD160 f517ca3c84db1ff6d3585ebe475f8169ec4d50de files/digest-ftgl-2.1.2 232
+SHA256 7c427c61f2ed3bc510628bdd46846133b53f0673fc43c92211dc62e4abd43385 files/digest-ftgl-2.1.2 232
+MD5 f3a1d4b170b3d3e121b240ba1554dacd files/digest-ftgl-2.1.2-r1 232
+RMD160 f517ca3c84db1ff6d3585ebe475f8169ec4d50de files/digest-ftgl-2.1.2-r1 232
+SHA256 7c427c61f2ed3bc510628bdd46846133b53f0673fc43c92211dc62e4abd43385 files/digest-ftgl-2.1.2-r1 232
