@@ -1,1 +1,3 @@
 MD5 3eabec9ad37371c4d139408c7ffd2429 ftgl-2.1.2.tar.gz 568497
+RMD160 561635a5ad871ea1a80997d3d6a0411825724920 ftgl-2.1.2.tar.gz 568497
+SHA256 83bf45ce03495bb0c0159a678144877b0dbc7d2f3d8e9f0aa006e72c5198d15f ftgl-2.1.2.tar.gz 568497
