@@ -1,8 +1,8 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/ftgl/ftgl-2.1.2-r1.ebuild,v 1.4 2006/05/07 20:30:30 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/ftgl/ftgl-2.1.2-r1.ebuild,v 1.5 2006/07/25 19:33:52 mr_bones_ Exp $
 
-inherit eutils libtool
+inherit eutils flag-o-matic libtool
 
 DESCRIPTION="library to use arbitrary fonts in OpenGL applications"
 HOMEPAGE="http://homepages.paradise.net.nz/henryj/code/#FTGL"
@@ -24,8 +24,9 @@ src_unpack() {
 	cd "${WORKDIR}"
 
 	# Use the correct includedir for pkg-config
-	epatch "${FILESDIR}/${PV}-ftgl.pc.in.patch"
-	epatch "${FILESDIR}/${P}-gcc41.patch"
+	epatch \
+		"${FILESDIR}/${PV}-ftgl.pc.in.patch" \
+		"${FILESDIR}/${P}-gcc41.patch"
 	if ! has_version app-doc/doxygen; then
 		cd FTGL/docs
 		tar xzf html.tar.gz || die "unpack html.tar.gz"
@@ -42,6 +43,7 @@ src_unpack() {
 }
 
 src_compile() {
+	strip-flags # ftgl is sensitive - bug #112820
 	econf \
 		--enable-shared \
 		$(use_enable static) || die
