@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/ftgl
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/ftgl/ChangeLog,v 1.7 2006/05/07 20:30:30 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/ftgl/ChangeLog,v 1.8 2006/07/25 19:33:53 mr_bones_ Exp $
+
+  25 Jul 2006; Michael Sterrett <mr_bones_@gentoo.org> ftgl-2.1.2-r1.ebuild:
+  strip-flags since ftgl is sensitive - bug #112820
 
   07 May 2006; Markus Rothe <corsair@gentoo.org> ftgl-2.1.2-r1.ebuild:
   Stable on ppc64
